# blacklite

./: .editorconfig  .gitignore  .jabbarc  .travis.yml  BENCHMARKS.md  CLAUDE.md  COMPRESSION.md  README.md  RELEASING.md  SQLITE.md  build.gradle  gradle.properties  pyproject.toml  settings.gradle  spotless.properties  version.properties
blacklite-benchmarks/: blacklite-benchmarks.gradle  build.gradle
blacklite-codec-encryption/: build.gradle
blacklite-codec-zstd/: blacklite-codec-zstd.gradle
blacklite-core/: blacklite-core.gradle  build.gradle
blacklite-log4j2/: blacklite-log4j2.gradle  build.gradle
blacklite-log4j2-codec-zstd/: blacklite-log4j2-codec-zstd.gradle  build.gradle
blacklite-logback/: blacklite-logback.gradle  build.gradle
scripts/python/: README.md  compress.py  pyproject.toml  reader.py  zstd-compress.py  zstd-decompress.py  zstd-dict-compress.py  zstd-dict-reader.py  zstd-reader.py  zstd_dict_custom_reader.py  zstd_dict_reader.py
scripts/python/blacklite_tools/: cli_compress.py  cli_decompress.py  cli_reader.py  codecs.py  database.py
scripts/python/plain/: reader.py
scripts/python/tests/fixtures/: compressed.db  compressed_dict.db  generate_fixtures.py  uncompressed.db
scripts/python/tests/integration/: test_compress_integration.py  test_decompress_integration.py  test_reader_integration.py
scripts/python/tests/unit/: test_codecs.py  test_database.py
scripts/python/zstd/: zstd-compress.py  zstd-decompress.py  zstd-reader.py
scripts/python/zstd-dict/: zstd-dict-compress.py  zstd-dict-decompress.py  zstd-dict-reader.py
(+138 files in other folders)
