[project]
name = "blacklite-tools"
version = "0.1.0"
description = "Python tools for reading and managing Blacklite SQLite databases"
requires-python = ">=3.8"
dependencies = [
    "sqlite-utils>=3.0",
    "zstandard>=0.22.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
blacklite-reader = "blacklite_tools.cli_reader:main"
blacklite-compress = "blacklite_tools.cli_compress:main"
blacklite-decompress = "blacklite_tools.cli_decompress:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
